# OSMOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  makefile
src/core-minimal/: base.asm  boot.cpp  boot.hpp  linker.ld  makefile
src/core-minimal/common/: common.hpp  string.cpp  string.hpp
src/core-minimal/common/system/: mem.cpp  mem.hpp  version.hpp
src/core-minimal/common/system/gdt/: gdt.cpp  gdt.hpp
src/core-minimal/io/: io.cpp  io.hpp  vga_display.cpp  vga_display.hpp
src/core-minimal/io/driver/: driver.cpp  driver.hpp
src/core-minimal/io/pci/: pci.cpp  pci.hpp
src/core-minimal/multiboot2/: multiboot2.hpp
src/core-minimal/osmos/: osmos.hpp
src/i386/core-minimal/: Makefile  base.asm  boot.cpp  linker.ld  makefile
src/i386/core-minimal/osmos/: osmos.hpp
src/i386/core-minimal/osmos/io/: port.cpp  port.hpp  serial.cpp  serial.hpp
src/i386/core-minimal/osmos/sys/: memory.cpp  memory.hpp
src/i386/core-minimal/osmos/sys/cpp/: cs.asm
src/i386/core-minimal/osmos/sys/crt/: crti.asm  crtn.asm
